--- a/style.css
+++ b/style.css
@@ -3,6 +3,27 @@
 	scroll-behavior: smooth;
 }
 
-body {
-	margin: 0 200px;
+
+main {
+	
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+
+.hero-img {
+	width: 100vw;
+	height: 50vh;
+	
+	margin:  30px 0 30px;
+    background-image: url(img/hero-img.png);
+    background-position: center;
+    background-repeat: no-repeat;
+    position: relative;
+
+}
+
+main p {
+	
+	padding: 30px 0 30px;
 }
