--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap');
 * {
 	margin: 0;
 	scroll-behavior: smooth;
@@ -14,7 +15,6 @@ main {
 .hero-img {
 	width: 100vw;
 	height: 50vh;
-	
 	margin:  30px 0 30px;
     background-image: url(img/hero-img.png);
     background-position: center;
@@ -24,6 +24,8 @@ main {
 }
 
 main p {
-	
-	padding: 30px 0 30px;
+	display: flex;
+    margin: 0 260px;
+	font-family: 'Lato', sans-serif;
+	font-weight: bold;
 }
