--- a/nav.css
+++ b/nav.css
@@ -1,25 +1,22 @@
-header nav {
-	display: flex;
-
+nav {
+	display: grid;
+	grid-template-columns: 1fr 3fr;
+	align-self: center;
+	flex-direction: row;
 	justify-content: center;
+	width: 1000px;
+	margin: auto;
 }
 
 #logo-nav {
 	display: block;
 	height: 100px;
-	position:relative;
-
 }
 
-nav {
-	align-self: center;
-	flex-direction: row;
-	width: 100%;
-}
-
-
-ul li {
-	display: inline-block;
+ul {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
 }
 
 
@@ -27,7 +24,6 @@ li {
 	display: inline-block;
 	list-style-type: none;
 	background-color: transparent;
-	padding: 10px;
 	flex: 0 1 auto;
 	font-family: 'Montserrat', sans-serif;
 
