--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap');
+
 * {
 	margin: 0;
 	scroll-behavior: smooth;
@@ -6,29 +7,29 @@
 
 
 main {
-	
+
 	display: flex;
 	align-items: center;
 	justify-content: center;
 }
 
 .hero-img {
-	width: 100vw;
-	height: 50vh;
-	margin:  30px 0 30px;
-    background-image: url(img/hero-img.png);
-    background-position: center;
-    background-repeat: no-repeat;
-    position: relative;
-
+	width: 1000px;
+	height: 450px;
+	margin: 30px auto;
+	background-image: url(img/hero-img.png);
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: cover;
 }
 
 main p {
 	display: flex;
-    margin: 0 260px;
+	margin: 0 260px;
 	font-family: 'Lato', sans-serif;
 	font-weight: bold;
 }
+
 #my-img {
 	display: block;
 	width: 100%;
